Save перед корректировкой маршрутов

--- a/front/index.html
+++ b/front/index.html
@@ -52,6 +52,14 @@
                 <button type="submit">Подтвердить форму вопроса</button>
                 <div id="createQuizzesQuestions-message"></div>
             </form>
+            <form id="createQuizzesQuestionsAnswers-form" style="display:none;" enctype="multipart/form-data">
+                <h2>Добавление вопросов к созданному квизу</h2>
+                <input type="text" id="answer1" placeholder="Введите  название вопроса" required>
+                <input type="text" id="answer2" placeholder="Введите  название вопроса" required>
+                <input type="text" id="answer3" placeholder="Введите  название вопроса" required>
+                <button type="submit">Подтвердить форму вопроса</button>
+                <div id="createQuizzesQuestionsAnswers-message"></div>
+            </form>
         </div>
         <div id="messageElement" style="display: none; color: red;">
 
