Закончил добавление вопроса. Создал форму выбора действия либо добавить вопрос либо завершить работу с квизом

--- a/front/index.html
+++ b/front/index.html
@@ -60,6 +60,11 @@
                 <button type="submit">Подтвердить форму вопроса</button>
                 <div id="createQuizzesQuestionsAnswers-message"></div>
             </form>
+            <form id="submitAppendQuestion-form" style="display:none;" enctype="multipart/form-data">
+                <h2>Хотите добавить еще вопросы к созданному квизу?</h2>
+                <button type="submit" id="append">Добавить еще вопрос</button>
+                <button type="submit" id="stop">Завершить</button>
+            </form>
         </div>
         <div id="messageElement" style="display: none; color: red;">
 
