Закончил изменения по очистке сообщений, отображаются лишь квизы автора, исправил баг с привязкой к новому ID

--- a/front/index.html
+++ b/front/index.html
@@ -53,11 +53,11 @@
                 <div id="createQuizzesQuestions-message"></div>
             </form>
             <form id="createQuizzesQuestionsAnswers-form" style="display:none;" enctype="multipart/form-data">
-                <h2>Добавление вопросов к созданному квизу</h2>
+                <h2>Добавление ответов к созданному квизу</h2>
                 <input type="text" id="answer1" placeholder="Введите  название вопроса" required>
                 <input type="text" id="answer2" placeholder="Введите  название вопроса" required>
                 <input type="text" id="answer3" placeholder="Введите  название вопроса" required>
-                <button type="submit">Подтвердить форму вопроса</button>
+                <button type="submit">Подтвердить форму ответов</button>
                 <div id="createQuizzesQuestionsAnswers-message"></div>
             </form>
             <form id="submitAppendQuestion-form" style="display:none;" enctype="multipart/form-data">
@@ -71,7 +71,8 @@
         </div>
     </div>
 
-    <script src="js/scripts.js"></script>
+    <script src="js/after_bags_scripts.js"></script>
+
 </body>
 </html>
 
